--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@google-cloud/local-auth": "^3.0.1",
+    "@react-oauth/google": "^0.12.2",
     "@reduxjs/toolkit": "^2.9.2",
     "axios": "^1.13.2",
     "google-auth-library": "^10.5.0",
