--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^2.9.2",
     "axios": "^1.13.2",
     "google-auth-library": "^10.5.0",
+    "lucide-react": "^0.553.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
