--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.3",
+    "recharts": "^3.4.1",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
