Restaurados cambios originales de rama huber post-merge
- Restauradas modificaciones en formularios de auth
- Restaurados cambios en ProductList y ProductCard
- Restauradas configuraciones en .env e index.html
- Integrado GoogleOAuthProvider en main.tsx
- Mantenida compatibilidad con merge de rama conexion

--- a/.env
+++ b/.env
@@ -1,1 +1,9 @@
+# URL del backend
+VITE_API_URL=http://localhost:4000/api/v1
+
+# Google OAuth Client ID (obtener de Google Cloud Console)
 VITE_GOOGLE_CLIENT_ID=926526886195-129h2r8o6l6cmhl4em8nup3etjobnuqg.apps.googleusercontent.com
+
+# Configuración de la aplicación
+VITE_APP_NAME=Makip
+VITE_APP_VERSION=1.0.0
